chore:项目初始化

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .DS_Store
-node_modules
-/dist
+/dist/*
+.local
+.output.js
+/node_modules/**
+
+**/*.svg
+**/*.sh
+
+/public/*
 
 
 # local env files
