--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service --mode development --open",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build:prod": "vue-cli-service build --mode prod"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.1",
     "vue": "^3.2.13",
