--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "css-color-function": "^1.3.3",
     "element-plus": "^2.3.1",
+    "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "rgb-hex": "^4.0.1",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -38,9 +42,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^8.0.0",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
     "prettier": "^2.4.1",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1"
