--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@
 ENV = 'development'
 # base api
 VUE_APP_BASE_API = /api
-VUE_APP_SERVICE_URL = 'http://123.207.32.32:8000/'
+VUE_APP_SERVICE_URL = 'http://localhost:3000'
 VUE_APP_BASE_NAME = 'Shu-Admin'
 VUE_APP_BASE_TIME_OUT = 1000
