--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "css-color-function": "^1.3.3",
+    "driver.js": "^0.9.8",
     "element-plus": "^2.3.1",
+    "fuse.js": "^6.6.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "rgb-hex": "^4.0.1",
+    "screenfull": "^6.0.2",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
@@ -42,6 +46,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^8.0.0",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
