refactor(custom): ts中使用scss变量

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/components/index.js",
-    "src/components/index.js"
+    "src/components/index.js",
+    "src/**/*.scss"
   ]
 }
