--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build:prod": "vue-cli-service build --mode prod"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.2",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "css-color-function": "^1.3.3",
     "driver.js": "^0.9.8",
     "element-plus": "^2.3.1",
+    "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -25,12 +27,16 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "wangeditor": "^4.7.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/file-saver": "^2.0.5",
     "@types/nprogress": "^0.2.0",
+    "@types/path-browserify": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
