--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.3.1",
     "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
+    "js-audio-recorder": "^1.0.7",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "rgb-hex": "^4.0.1",
